change main styles

--- a/client/assets/css/_variables.scss
+++ b/client/assets/css/_variables.scss
@@ -1,6 +1,6 @@
 $main-font: 'Brandon Grotesque', sans-serif;
 
-$main-color: #FF4E50;
+$main-color: #FE7058;
 $second-color: #fdd156;
 $black: #2a2424;
 $white: #FFF;
